# eyes

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  config.example.toml  config.local.toml  test_mock_config.toml
.github/workflows/: ci.yml  release.yml
.kiro/hooks/: agent-stop-cargo-check.kiro.hook  rust-docs-sync.kiro.hook
.kiro/specs/macos-system-observer/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
docs/: ai-analysis.md  ai-backends.md  alerts.md  application-orchestration.md  architecture.md  async-processing.md  buffer-parsing.md  cli.md  collectors.md  configuration.md  data-models.md  disk-monitoring.md  error-handling.md  event-aggregation.md  io-handling.md  macos-integration.md  metrics-collection.md  self-monitoring.md  subprocess-management.md  testing.md  trigger-rules.md
src/: error.rs  events.rs  lib.rs  main.rs  mcp.rs  monitoring.rs  web.rs
src/aggregator/: event_aggregator.rs  mod.rs
src/ai/: analyzer.rs  backends.rs  mod.rs
src/alerts/: alert_manager.rs  mod.rs  rate_limiter.rs  store.rs
src/collectors/: disk_collector.rs  log_collector.rs  metrics_collector.rs  mod.rs
src/config/: conf.rs  config.rs  mod.rs
src/triggers/: mod.rs  rules.rs  trigger_engine.rs
statics/: app.js  index.html  rules.html  rules.js  styles.css
