[package]
name = "eyes"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
plist = "1.7"
toml = "0.8"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client for AI backends
reqwest = { version = "0.12", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
# Property-based testing
quickcheck = "1.0"
quickcheck_macros = "1.0"

# Mocking
mockall = "0.13"

# Temporary files for testing
tempfile = "3.12"
